<resources>
    <string name="app_name">My Application</string>
    <string name="welcome_to_tic_tac_toe">WELCOME TO TIC TAC TOE</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="TODO7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="x_turns_to_play">X turns to play</string>
    <string name="x_turn_to_play">X TURN TO PLAY</string>
</resources>